--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,8 @@
 <!DOCTYPE html>
 <html>
-
-  {% include head.html %}
-
-  <body>
-
-    {% include header.html %}
-
-    <div class="page-content">
-      <div class="wrapper">
+	{% include head.html %}
+	<body>
+		{% include bar.html %}
         {{ content }}
-      </div>
-    </div>
-
-    {% include footer.html %}
-
-  </body>
-
+	</body>
 </html>
