--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,10 @@
 	{% include head.html %}
 	<body>
 		{% include bar.html %}
-        {{ content }}
+		<div class="post">
+			<div style="padding:40px;">
+        		{{ content }}
+			</div>
+		</div>
 	</body>
 </html>
