--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,19 @@
 		{% include bar.html %}
 		<div class="post">
 			<div style="padding:40px;">
-        		{{ content }}
+				{{ content }}
+				<div id="disqus_thread"/>
 			</div>
 		</div>
 	</body>
 </html>
+<script type="text/javascript">
+	var disqus_shortname = 'wsztrush';
+	(function() {
+		var dsq = document.createElement('script');
+		dsq.type = 'text/javascript';
+		dsq.async = true;
+		dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+		(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+	})();
+</script>
