--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,11 +6,12 @@
 		<div class="post">
 			<div style="padding:40px;">
 				{{ content }}
-				<div id="disqus_thread"/>
+				<div id="disqus_thread"/><!-- 评论组件 -->
 			</div>
 		</div>
 	</body>
 </html>
+<!-- 评论组件 -->
 <script type="text/javascript">
 	var disqus_shortname = 'wsztrush';
 	(function() {
