--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 	{% include head.html %}
 	<body>
 		{% include bar.html %}
-		<div class="post">
+		<div class="post-container">
 			<div style="padding:40px;">
 				{{ content }}
 				<div id="disqus_thread"/><!-- 评论组件 -->
