--- a/assets/css/pygments.css
+++ b/assets/css/pygments.css
@@ -1,4 +1,4 @@
-.highlight pre { background-color:#000;font-size:14px;}
+.highlight pre { background-color:#000;font-size:14px;font-family: Menlo,Monaco,"Andale Mono","lucida console","Courier New"}
 
 .hll { background-color: #49483e }
 .c { color: #75715e } /* Comment */
