--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,7 +20,7 @@ a {
 
 .post-container{
 	background-color:#3C4043;
-	color:#FFF;
+	color:#FAFAFA;
 	margin-left:260px;
 	margin-right:20px;
 	min-width:800px;
