--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 		<div class="post-container">
 			<div style="padding:40px;">
 				{{ content }}
-				<div class="ds-thread" data-thread-key="请将此处替换成文章在你的站点中的ID" data-title="请替换成文章的标题" data-url="请替换成文章的网址"></div>
+				<div class="ds-thread" data-thread-key="2015/04/20/welcome-to-jekyll" data-title="welcome-to-jekyll" data-url="http://wsztrush.github.io/dsl/2015/04/20/welcome-to-jekyll.html"></div>
 				<div id="disqus_thread"/><!-- 评论组件 -->
 			</div>
 		</div>
