--- a/_includes/bar.html
+++ b/_includes/bar.html
@@ -8,7 +8,8 @@
 		<ul style="padding-left:0px;list-style-type:none;">
 			{% for cat in site.categories %}
 			<li>
-			<a href="{{ site.baseurl }}/categories/{{ cat[0] }}">{{ cat[0] }} x {{ cat | last | size }}</a></li>
+			<a href="{{ site.baseurl }}/categories/{{ cat[0] }}">{{ cat[0] }} x {{ cat | last | size }}</a>
+			</li>
 			{% endfor %}
 		</ul>
 	</div>
