--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,21 +7,20 @@
 			<div style="padding:40px;">
 				{{ content }}
 				<!-- 评论组件 -->
-				<div class="ds-thread" data-thread-key="2015/04/20/welcome-to-jekyll" data-title="welcome-to-jekyll" data-url="http://wsztrush.github.io/dsl/2015/04/20/welcome-to-jekyll.html"></div>
+				<div id="disqus_thread"/>
 			</div>
 		</div>
 	</body>
 </html>
 <!-- 评论组件 -->
 <script type="text/javascript">
-	var duoshuoQuery = {short_name:"wsztrush"};
+	var disqus_shortname = 'wsztrush';
 	(function() {
-		var ds = document.createElement('script');
-		ds.type = 'text/javascript';ds.async = true;
-		ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
-		ds.charset = 'UTF-8';
-		(document.getElementsByTagName('head')[0] 
-		 || document.getElementsByTagName('body')[0]).appendChild(ds);
+		var dsq = document.createElement('script');
+		dsq.type = 'text/javascript';
+		dsq.async = true;
+		dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+		(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
 	})();
 </script>
 {% include statistical.html %}
