--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,4 +6,7 @@
 
 	<!-- code -->
 	<link rel="stylesheet" type="text/css" href="/assets/css/pygments.css"/>
+	<!-- google代码高亮 -->
+	<script src="http://cdn.bootcss.com/ink/3.1.7/js/prettify.js"></script>
+	<link href="http://cdn.bootcss.com/prettify/r298/prettify.css" rel="stylesheet">
 </head>
