--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	{% include head.html %}
-	<body>
+	<body onload="prettyPrint()">
 		{% include bar.html %}
 		<div class="post-container">
 			<div style="padding:40px;">
