--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,6 @@
 	<!-- code -->
 	<link rel="stylesheet" type="text/css" href="/assets/css/pygments.css"/>
 	<!-- google代码高亮 -->
-	<script src="http://cdn.bootcss.com/ink/3.1.7/js/prettify.js"></script>
-	<link href="http://cdn.bootcss.com/prettify/r298/prettify.css" rel="stylesheet">
+	<script src="http://blog.codinglabs.org/assets/vendor/google-code-prettify/prettify.js"></script>
+	<link href="http://blog.codinglabs.org/assets/vendor/google-code-prettify/prettify-solarized-dark.css" rel="stylesheet">
 </head>
