--- a/assets/css/prettify.css
+++ b/assets/css/prettify.css
@@ -66,5 +66,5 @@ ol.linenums {
   margin: 0 0 0 0px; }
 
 ol.linenums li {
-  line-height: 18px;
-  padding-left: 12px; }
+  line-height: 1.5em;
+  padding-left: 1em; }
