--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,8 +4,8 @@
 	<link rel="stylesheet" type="text/css" href="/assets/css/main.css"/>
 	<script type="text/javascript" src="/assets/javascripts/main.js"></script>
 
-	<!-- code -->
-	<link rel="stylesheet" type="text/css" href="/assets/css/pygments.css"/>
+	<!-- pygments代码高亮 -->
+	<!-- <link rel="stylesheet" type="text/css" href="/assets/css/pygments.css"/> -->
 	<!-- google代码高亮 -->
 	<script src="/assets/css/prettify.js"></script>
 	<link href="/assets/css/prettify.css" rel="stylesheet">
