--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -6,7 +6,7 @@ title: 分类
 	{% for post in site.categories[page.category] %}
 	<li>
 		<div class="post-title">
-			<a href="{{site.baseurl}}{{post.url}}"> {{post.title}} @ {{post.date | date:'%Y-%m-%d }}</a> </br>
+			<a href="{{site.baseurl}}{{post.url}}"> {{post.title}}  {{post.date | date:'%Y-%m-%d }}</a> </br>
 		</div>
 	</li>
 	{% endfor %}
