--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -6,12 +6,8 @@ title: 分类
 	{% for post in site.categories[page.category] %}
 	<li>
 		<div class="post-title">
-			<a href="{{site.baseurl}}{{post.url}}"> {{post.title}}</a> </br>
+			<a href="{{site.baseurl}}{{post.url}}"> {{post.title}}</a> {{ post.date | date: '%Y-%m-%d' }} </br>
 		</div>
-		      <div class="post-info">
-				          <ol>
-												          </ol>
-														        </div>
 	</li>
 	{% endfor %}
 </ul>
