--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,4 +9,5 @@
 	<!-- google代码高亮 -->
 	<script src="/assets/css/prettify.js"></script>
 	<link href="/assets/css/prettify.css" rel="stylesheet">
+	<title>{{ page.title }}</title>
 </head>
