--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,7 @@
 		{% include bar.html %}
 		<div class="post-container">
 			<div style="padding:40px;">
+				<h1>{{ page.title }}</h1>
 				{{ content }}
 				<!-- 评论组件 -->
 				<div id="disqus_thread"/>
