--- a/_includes/bar.html
+++ b/_includes/bar.html
@@ -1,7 +1,7 @@
 <!-- 导航栏设计 -->
 <nav>
 	<div style="padding:10px;">
-		<a href="#" style="border-bottom-style:none;"><img src="/assets/blog-images/head-pic.jpg" style="width:220px;"/></a>
+		<a href="/" style="border-bottom-style:none;"><img src="/assets/blog-images/head-pic.jpg" style="width:220px;"/></a>
 	</div>
 	<div style="color:#FFF;font-size:24px;padding:10px;">
 		<b>WsztRush's Blog</b>
