--- a/_includes/bar.html
+++ b/_includes/bar.html
@@ -4,7 +4,7 @@
 		<a href="/" style="border-bottom-style:none;"><img src="/assets/blog-images/head-pic.jpg" style="width:220px;"/></a>
 	</div>
 	<div style="color:#FFF;font-size:24px;padding:10px;">
-		<b>WsztRush's Blog</b>
+		<b>wsztrush</b>
 		<ul style="padding-left:0px;list-style-type:none;">
 			{% for cat in site.categories %}
 			<li>
