--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
 		<div class="post-container">
 			{{ content }}
 		</div>
+		{% include tool.html %}
 	</body>
 </html>
 {% include statistical.html %}
