--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,3 +9,6 @@
 	</body>
 </html>
 {% include statistical.html %}
+<script type="text/javascript">
+	document.getElementById("barClick").onclick = click;
+</script>
