--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -2,12 +2,10 @@
 layout: default
 title: 分类
 ---
-<ul class="post-list">
+<ul class="cul">
 	{% for post in site.categories[page.category] %}
-	<li>
-		<div class="post-title">
-			<a href="{{site.baseurl}}{{post.url}}"> {{post.title}}</a> {{ post.date | date: '%Y-%m-%d' }} </br>
-		</div>
+	<li class="cli">
+		<a href="{{site.baseurl}}{{post.url}}"> {{post.title}}</a> {{ post.date | date: '%Y-%m-%d' }}
 	</li>
 	{% endfor %}
 </ul>
