--- a/_includes/tool.html
+++ b/_includes/tool.html
@@ -3,5 +3,5 @@
 	<div class="icon"><a href="{{ site.baseurl }}/categories.html"><img src="http://7xiz10.com1.z0.glb.clouddn.com/list.png"/></a></div>
 	<div class="icon"><a href="https://github.com/wsztrush"><img src="http://7xiz10.com1.z0.glb.clouddn.com/github.png"/></a></div>
 	<div class="icon"><a href="http://weibo.com/wsztrush"><img src="http://7xiz10.com1.z0.glb.clouddn.com/weibo.png"/></a></div>
-	<div class="icon"><img id="barClick" src="http://7xiz10.com1.z0.glb.clouddn.com/right.png"/></div>
+	<div class="icon"><a href="{{ site.baseurl }}/about/"><img id="barClick" src="http://7xiz10.com1.z0.glb.clouddn.com/right.png"/></a></div>
 </div>
