--- a/_includes/tool.html
+++ b/_includes/tool.html
@@ -5,3 +5,12 @@
 	<div class="icon"><a href="http://weibo.com/wsztrush"><img src="http://7xiz10.com1.z0.glb.clouddn.com/weibo.png"/></a></div>
 	<div class="icon"><img id="barClick" src="http://7xiz10.com1.z0.glb.clouddn.com/right.png"/></div>
 </div>
+
+<div class="tool">
+	<span><b>WsztRush</b></span>
+	<div class="links">
+		<a href="{{ site.baseurl }}">Blog</a>
+		<a href="{{ site.baseurl }}/categories.html">Categories</a>
+		<a href="{{ site.baseurl }}/about/">About</a>		
+	</div>
+</div>
