--- a/_includes/tool.html
+++ b/_includes/tool.html
@@ -1,7 +1,7 @@
 <div class="tool">
 	<span><b>WsztRush</b></span>
 	<div class="links">
-		<a href="{{ site.baseurl }}">Blog</a>
+		<a href="{{ site.baseurl }}/index.html">Blog</a>
 		<a href="{{ site.baseurl }}/categories.html">Categories</a>
 		<a href="{{ site.baseurl }}/about/">About</a>		
 	</div>
