--- a/_layouts/slides.html
+++ b/_layouts/slides.html
@@ -1,18 +1,17 @@
----
-layout: post
-title: 从下向上的设计
-date: 2015-12-17
-categories: 编程技术
-
----
-
-	<script type="text/javascript" src="http://cdn.bootcss.com/reveal.js/3.0.0/js/reveal.min.js"></script>
+<!DOCTYPEhtmlPUBLIC"-//W3C//DTDXHTML1.0Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
+<html>
+	<head>
+		<script type="text/javascript" src="http://cdn.bootcss.com/reveal.js/3.0.0/js/reveal.min.js"></script>
+	</head>
+	<body>
 		<section data-markdown>
 		  ## Markdown support
 
 		  Write content using inline or external Markdown.
 		  Instructions and more info available in the [readme](https://github.com/hakimel/reveal.js#markdown).
 		</section>
+	</body>
+</html>
 <script>
 //在这里对幻灯片进行配置
 Reveal.initialize({
@@ -44,11 +43,3 @@ Reveal.initialize({
 	transitionSpeed: 'default', // default/fast/slow
 });
 </script>
-
-
-
-
-
-
-
-
