--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,8 @@
 			<h1>{{ page.title }}</h1>
 			{{ content }}
 			<!-- 评论组件 -->
+			<div class="ds-thread" data-thread-key="{{ page.url }}" data-title="{{ page.title }}"  data-url="{{ page.url }}"></div>
+			<!-- 评论组件 -->
 			<div id="disqus_thread"/>
 		</div>
 	</body>
@@ -22,5 +24,18 @@
 		(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
 	})();
 </script>
+<!-- 多说公共JS代码-->
+<script type="text/javascript">
+var duoshuoQuery = {short_name:"wsztrush"};
+	(function() {
+		var ds = document.createElement('script');
+		ds.type = 'text/javascript';ds.async = true;
+		ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
+		ds.charset = 'UTF-8';
+		(document.getElementsByTagName('head')[0] 
+		 || document.getElementsByTagName('body')[0]).appendChild(ds);
+	})();
+</script>
+
 {% include statistical.html %}
 
